--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Chrome extension to point out that no-one really believes what they believe on the internet, for a more enjoyable Reddit experience.
+Chrome extension to point out that no-one really believes what they say on the internet, for a more enjoyable Reddit experience.
